--- a/templates/home/newTask.html.twig
+++ b/templates/home/newTask.html.twig
@@ -3,16 +3,96 @@
 {% block title %}NewTask{% endblock %}
 
 {% block body %}
-    <h1>Create new task</h1>
+    <style>
+        :root {
+            --bg: #f8fafc;
+            --card: #ffffff;
+            --border: #e2e8f0;
+            --primary: #4f46e5;
+            --primary-hover: #4338ca;
+            --text-main: #1e293b;
+            --text-muted: #64748b;
+            --success: #16a34a;
+            --warning: #f59e0b;
+            --danger: #dc2626;
+        }
 
-    {{ form_errors(registrationForm) }}
+        body {
+            background-color: var(--bg);
+            font-family: "Inter", sans-serif;
+            color: var(--text-main);
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
 
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.name) }}
-        {{ form_row(registrationForm.description) }}
-        {{ form_row(registrationForm.level) }}
+        #backBtn{
+            color: var(--primary);
+            text-decoration: none;
+            font-size: 50px;
+            position: absolute;
+            top:50px;
+            left: 50px;
+        }
 
+        #card {
+            background: #ffffff;
+            padding: 40px;
+            border-radius: 15px;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+            width: 100%;
+            max-width: 420px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+        }
 
-        <button type="submit" class="btn">Create</button>
-    {{ form_end(registrationForm) }}
+        .btn-modern {
+            background-color: var(--primary);
+            color: white;
+            border-radius: 10px;
+            padding: 8px 14px;
+            border: none;
+            transition: 0.2s ease;
+        }
+
+        #createDiv{
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            margin-top: 20px;
+        }
+
+        input{
+            border-radius: 10px;
+            padding: 12px;
+            margin-bottom: 15px;
+        }
+
+        label{
+            margin-right:10px;
+        }
+
+    </style>
+    <a href="/home/not_done" id="backBtn">
+        <-
+    </a>
+
+    <div id="card">
+        <h1>Create new task</h1>
+
+        {{ form_errors(registrationForm) }}
+
+        {{ form_start(registrationForm) }}
+            {{ form_row(registrationForm.name) }}
+            {{ form_row(registrationForm.description) }}
+            {{ form_row(registrationForm.level) }}
+
+            <div id="createDiv">
+                <button type="submit" class="btn-modern">Create</button>
+            </div>
+        {{ form_end(registrationForm) }}
+    </div>
 {% endblock %}
